--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,7 @@ jobs:
         run: |
           git config --local user.email "test@test.com"
           git config --local user.name "Test"
+          touch change.txt
           git commit -a -m "Add changes"
       - name: Push changes
         uses: ad-m/github-push-action@master
