--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: "ci build"
 on:
   workflow_dispatch:
   pull_request:
-    types: [ opened ]
+    types: [ opened, synchronize, ready_for_review, reopened ]
   push:
     branches:
       - main
