--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,19 +18,25 @@ jobs:
           app_id: ${{ secrets.BOT_APP_ID }}
           private_key: ${{ secrets.BOT_PRIVATE_KEY }}
       - uses: actions/checkout@v3
+        env:
+          TOKEN: ${{ steps.generate_token.outputs.token }}
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
-          token: ${{ steps.generate_token.outputs.token }}
+          token: ${TOKEN}
       - name: Commit files
+        env:
+          TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
           git config --local user.email "test@test.com"
           git config --local user.name "Test"
           touch $RANDOM.txt
           git add -A
           git commit -m "Add changes"
-          echo ${{ steps.generate_token.outputs.token }}
+          echo ${TOKEN}
       - name: Push changes
         uses: ad-m/github-push-action@master
+        env:
+          TOKEN: ${{ steps.generate_token.outputs.token }}
         with:
-          github_token: ${{ steps.generate_token.outputs.token }}
+          github_token: ${TOKEN}
