--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,5 @@ jobs:
           git commit -m "Add changes"
       - name: Push changes
         uses: ad-m/github-push-action@master
-        env:
-          TOKEN: ${{ steps.generate_token.outputs.token }}
         with:
-          github_token: ${{TOKEN}}
+          github_token: ${{ steps.generate_token.outputs.token }}
