--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,8 +1,9 @@
-name: CI
+name: CD
 on:
-  workflow_dispatch:
-  pull_request:
-    types: [ opened, synchronize, reopened ]
+  workflow_run:
+    workflows: [ci]
+    types: [completed]
+    branches: [main]
 
 jobs:
   release:
@@ -13,4 +14,4 @@ jobs:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
       - name: Echo
-        run: echo CI
+        run: echo CD
