--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,12 @@
-name: CI
+name: CI/CD
 on:
   pull_request:
     types: [ opened, synchronize, ready_for_review, reopened ]
-
+  push:
+    branches:
+      - main
 jobs:
-  ci:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -12,4 +14,15 @@ jobs:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
       - name: Echo
-        run: echo CI
+        run: echo tests
+  release:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+      - name: Echo
+        run: echo release
