--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
           echo '${{ toJSON(github.event) }}' | jq
           echo '${{ toJSON(github.event.pull_request) }}' | jq
   release:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged
     needs: tests
     runs-on: ubuntu-latest
     steps:
