--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
       - name: Echo
         run: | 
-          echo tests
+          echo tests2
   release:
     needs: tests
     runs-on: ubuntu-latest
