--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Echo
-        run: echo tests
+      - name: Runt tests
+        run: echo 1
   release:
     needs: tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Echo
-        run: echo release
+      - name: Release
+        run: echo 2
