--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Release
         run: |
-          git config --local user.email "slawomir.kania1@gmail.com"
+          git config --local user.email "slawomir.kania@itv.com"
           git config --local user.name "Slawomir Kania"
           featureName=$RANDOM
           touch $featureName
