--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,11 +19,19 @@ jobs:
     needs: tests
     runs-on: ubuntu-latest
     steps:
+      - name: Generate a token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.BOT_APP_ID }}
+          private_key: ${{ secrets.BOT_PRIVATE_KEY }}
       - uses: actions/checkout@v3
+        with:
+          token: ${{ steps.generate_token.outputs.token }}
       - name: Release
         run: |
-          git config --local user.email "slawomir.kania1@gmail.com"
-          git config --local user.name "Slawomir Kania"
+          git config --local user.email "example@github.com"
+          git config --local user.name "Example"
           version=$RANDOM
           echo $version > version.sbt
           git add -A
